[tool.poetry]
name = "mqtt_cul_server"
version = "0.2.0"
description = "Home Assistant Addon to connect a CUL wireless transceiver"
authors = ["Bernhard Bock <bernhard@bock.nu>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^1.6.1"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pylint = "^2.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

